# BiBo

./: .coderabbit.yaml  .gitignore  .windsurfrules  AGENTS.md  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  CODERABBIT_SUMMARY.md  README.md  REFACTOR_SUMMARY.md  TRAINING_RESULTS.md  VERIFICATION_GUIDE.md  analyze_bibo_router.py  configuration_bibo.py  modeling_bibo.py  pyproject.toml  requirements.txt  rope_utils.py  run_all_tests.py  specification.md  test_bibo_moe_layer_simple.py  test_bibo_moe_router.py  test_model.py  test_sliding_window_attention.py
ablate/: README.md
aux_loss_for_entropy/: problem_and_approaches.md
baseline/: __init__.py
bench/: README.md  __init__.py  _compare_final.py  bench_muon.py  ckpt_compare.py  compare.py  config.py  data.py  e2e_ce_matrix.py  e2e_profile_1024.py  eval.py  exp_kappa.py  exp_manas.py  fused_muon.py  metrics.py  models.py  notebook.ipynb  optim.py  optim_modded.py  run.sh  run_comparison.sh  train.py  train_qwen.py  utils.py
docs/: attention_layers.md  benchmark-pipeline.html  benchmarking.md  configuration_guide.md  deprecated.md  kaggle_guide.md  kernel_benchmark_report.md  kernel_benchmarks.md  moe_shared_scaling.md  ssmax.md  triton_kernels.md  xsa.md
kaggle_ablations/: config.yaml  extract_metrics.py  plots.py  train.py
kaggle_multi_gpu/: analyze_router.py  config.yaml  data.py  train.py
legacy/: modeling_bibo.py  test_bibo_moe_layer.py  test_config_bibo.py
old_kernels/: dense_mlp.py  dense_mlp_fused.py  dense_mlp_separate_backward.py
profiling/: bibo_norm_profiler.py  bibo_norm_stability.py
src/: __init__.py  (+2 more)
(+199 files in other folders)
